Criacao da classe Convidado e do repositorio

--- a/src/main/resources/templates/ListaConvidados.html
+++ b/src/main/resources/templates/ListaConvidados.html
@@ -11,7 +11,12 @@
 	rel="stylesheet" />
 </head>
 <body>
-	<h1>AlgaWorks!</h1>
+	<h1 align="center">Teste!</h1>
+	
+	
+	
+	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </body>
 
 </html>
