--- a/src/main/resources/templates/ListaConvidados.html
+++ b/src/main/resources/templates/ListaConvidados.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
-
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
 <title>Lista de Convidados</title>
 <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
-	rel="stylesheet" />
+	rel="stylesheet"
+/>
 <link th:href="@{/webjars/bootstrap/css/bootstrap-theme.min.css}"
-	rel="stylesheet" />
+	rel="stylesheet"
+/>
 </head>
 <body>
-	<h1 align="center">Teste!</h1>
-	
-	
-	
+	<div class="panel panel-default" style="margin: 10px">
+		<div class="panel-heading">
+			<h1 align="center" class="panel-title">Lista de Convidados</h1>
+		</div>
+	</div>
+	<div class="panel-body">
+	<form class="form-inline" method="POST" style="margin: 20px 0" th:object="${convidado}" th:action="@{/convidados}"	>
+		<div class="form-group">
+			<input class="form-control" type="text" placeholder="Nome" th:field="*{nome}" />
+			<input class="form-control" type="text" placeholder="Acompanhantes" th:field="*{quantidadeAcompanhantes}"/>
+			<button type="submit" class="btn btn-primary">Adicionar</button>
+		</div>
+	</form>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Nome</th>
+					<th>Acompanhantes</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="convidado : ${convidados}">
+					<th th:text="${convidado.nome}"></th>
+					<th th:text="${convidado.quantidadeAcompanhantes}"></th>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </body>
-
 </html>
